[package]
name = "rust_camunda_worker"
version = "0.1.0"
authors = ["Danilo Amoroso <dan.j.amoroso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_camunda_client = { path = "../rust-camunda-client"}
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
